--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Lato);
 @import url(https://fonts.googleapis.com/css?family=Oswald);
 @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
